<resources>
    <string name="app_name">Free IPhone???</string>
    <string name="action_about">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_iphone_for_free">Get IPhone for free!</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="play">Play</string>
    <string name="result">Result</string>
    <string name="option1_result">Option1_result</string>
    <string name="option2_result">Option2_result</string>
    <string name="option3_result">option3_result</string>
    <string name="option4_result">Option4_result</string>
    <string name="you_got_prize">You got prize!</string>

    <string name="author">Raeyoung Kim</string>
</resources>