<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultFragment"
    android:padding="16dp"
    android:background="#94A194">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="72dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_result"
        android:src="@drawable/iphone"/>

    <TextView
        android:id="@+id/ImageView1_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:text="@string/option1_result"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/imageView1"
        app:layout_constraintTop_toBottomOf="@id/textview_result"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="72dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        android:src="@drawable/iphone" />

    <TextView
        android:id="@+id/ImageView2_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="65dp"
        android:text="@string/option2_result"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/ImageView1_prize"/>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="72dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:src="@drawable/iphone" />

    <TextView
        android:id="@+id/ImageView3_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="65dp"
        android:text="@string/option3_result"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@id/ImageView2_prize"/>


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="72dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:src="@drawable/iphone" />

    <TextView
        android:id="@+id/ImageView4_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="65dp"
        android:text="@string/option4_result"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/ImageView3_prize"/>

    <TextView
        android:id="@+id/result_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_got_prize"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"/>

    <Button
        android:id="@+id/again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Again!"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_prize" />


</androidx.constraintlayout.widget.ConstraintLayout>